apps/ddns-updater/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns-updater
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ddns-updater
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ddns-updater
    spec:
      containers:
        - image: ghcr.io/qdm12/ddns-updater:v2.10.0
          name: ddns-updater
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /updater/data/config.json
              subPath: config.json
      volumes:
        - name: config
          secret:
            secretName: ddns-updater-config
