apps/ddns-updater/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns-updater
  labels:
    app.kubernetes.io/name: ddns-updater
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app.kubernetes.io/name: ddns-updater
